  stuck.

- Simplified key event workaround code. Let me know if you encouter any
  problems (such as garbage being inserted in the text area when certain
  keys are pressed, etc.)

- File dialog's completion was case sensitive when the TAB key was
  pressed. This was inconsistent with all other completion behavior
  which was case insensitive.

}}}
{{{ API Changes

- TokenHandler.handleToken() method now takes a Segment instance as
  the first parameter.

- Direct construction of SearchDialog no longer possible due to internal
  changes. The SearchDialog.showSearchDialog() method that has been
  recommended since jEdit 4.0 still works.

- Buffer.setReadOnly() can be used to make a buffer read only even if
  the file is writable on disk.

- Added JEditTextArea.addTopComponent() method (Brad Mace).

- Case-sensitivity is now determined on a per-filesystem basis, instead
  of always being on when running on Windows or MacOS X. To have your
  VFS be case-insensitive, define the CASE_INSENSITIVE_CAP.

}}}

}}}

{{{ Version 4.2pre2

Thanks to Carmine Lucarelli, Matt Albrecht, Ollie Rutherfurd and
Sebastien Pierre for contributing to this release.

{{{ Editing

- "Complete Word" now inserts the longest common prefix if there is more
  than one possible completion (the popup is still displayed as well).

- Added Ignore Case (C+e C+i) and Regular Expressions (C+e C+x) commands
  to Search menu for changing search bar settings from the keyboard.

- Incremental Search Bar and HyperSearch Bar commands now always
  disregard the selection. Use Incremental Search for Word and
  HyperSearch for Word commands if you want to search for the selected
  text.

- Made behavior of auto indent caused by "Insert Tab and Indent",
  "Insert Enter and Indent", and "Indent Selected Lines" commands is
  more consistent.

- Register commands now list registers, and marker commands now list
  markers with shortcuts in the status bar.
